# sqlanalytics

./: .env.example  .gitignore  README.md  prompt.py  pyproject.toml
analytics/: cors.py  factories.py  renderers.py  response_factory.py  serializers.py  streaming.py  urls.py  usage.py  views.py
analytics/agents/: runner.py
analytics/broker/: backend.py  consumer.py
analytics/management/: __init__.py
analytics/memory/: client.py
analytics/observability/: langfuse.py
analytics/services/: reports.py
analytics/sql/: exceptions.py  factory.py  providers.py  safety.py
analytics/tasks/: reports.py
config/: celery.py  settings.py  urls.py
docs/: api.md  application-flow.md
frontend/: app.js  index.html  styles.css
