[project]
name = "sqlanalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "httpx>=0.28.1",
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "langfuse>=4.7.1",
    "psycopg[binary,pool]>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "sqlglot>=30.9.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false

[tool.ty.environment]
python-version = "3.14"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]
